--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-  <title>Spoon-Knife</title>
+  <title>CRAZY OCTOCAT WINDOW</title>
   <style type="text/css">
     * {
       margin:0px;
@@ -21,7 +21,7 @@
       display: block;
       width: 400px;
       margin: 50px auto;
-      font: 30px Monaco,"Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
+      font: 30px "Magneto","Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",monospace;
     }
     #rainbow-message {
       position: absolute;
